syntax = "proto3";

option go_package = "gitlab.com/naftis/app/naftis/pkg/protocol/api";

package io.naftis.api;

import "api/protoc/entity/scheduled_workload_message.proto";

message ScheduleWorkloadRequest {
  // @inject_tag: validate:"required"
  io.naftis.entity.ScheduledWorkload spec = 1;
}