syntax = "proto3";

option go_package = "gitlab.com/naftis/app/naftis/pkg/protocol/entity";

package io.naftis.entity;

message WorkloadSpec {
  message Container {
    // @inject_tag: validate:"required,printascii"
    string name = 1;
    // @inject_tag: validate:"required,printascii"
    string image = 2;
    message Resources {
      // @inject_tag: validate:"required,numeric,gte=32,lte=65536"
      uint32 memory_size = 1;
      // @inject_tag: validate:"required,numeric,gte=1,lte=16"
      uint32 cpu_count = 2;
      // @inject_tag: validate:"required,numeric,gte=1000,lte=100000000"
      uint32 cpu_performance = 3;
    }
    // @inject_tag: validate:"required"
    Resources resources = 3;
    message Storage {
      // @inject_tag: validate:"required,dir"
      string path = 1;
      // @inject_tag: validate:"required,uri"
      string source = 2;
    }
    // @inject_tag: validate:"max=10"
    repeated Storage storage = 4;
  }
  // @inject_tag: validate:"required,min=1,unique=Name,dive,required"
  repeated Container containers = 2;
  enum Isolation {
    NO_ISOLATION = 0;
    CONTAINER_ISOLATION = 1;
    KERNEL_ISOLATION = 2;
  }
  // @inject_tag: validate:"required"
  Isolation isolation = 3;
}